# a-eye

./: .gitignore  AGENT.md  MODULE.bazel  README.md  defs.bzl  justfile  package.json  rbe.bzl
.dao/: snapshot.json  workflow-events.jsonl  workflow-snapshot.json
.github/workflows/: rust-ci.yml  rust-release.yml  shell-tool-mcp.yml
aeye-rs/: AGENTS.md  Cargo.toml
aeye-rs/core/: Cargo.toml  models.json
aeye-rs/core/src/: config.rs  lib.rs  policy.rs
aeye-rs/tui/: Cargo.toml
aeye-rs/tui/src/: app.rs  args.rs  lib.rs  main.rs  ui.rs
aeye-utils/: Cargo.toml
aeye-utils/aeye-absolute-path/: BUILD.bazel
aeye-utils/aeye-ansi-escape/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-apply-patch/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-apply-patch/src/: main.rs
aeye-utils/aeye-async-utils/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-cache/: BUILD.bazel
aeye-utils/aeye-cargo-bin/: BUILD.bazel  README.md
aeye-utils/aeye-execpolicy/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-execpolicy/src/: main.rs
aeye-utils/aeye-file-search/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-file-search/src/: main.rs
aeye-utils/aeye-git/: BUILD.bazel  Cargo.toml  README.md
aeye-utils/aeye-home-dir/: BUILD.bazel
aeye-utils/aeye-image/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-image/src/: lib.rs
aeye-utils/aeye-json-to-toml/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-keyring-store/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-mcp-types/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-protocol/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-protocol/src/: approvals.rs  models.rs  protocol.rs
aeye-utils/aeye-pty/: BUILD.bazel  Cargo.toml  README.md
aeye-utils/aeye-readiness/: BUILD.bazel  Cargo.toml
aeye-utils/aeye-string/: BUILD.bazel
codex-rs/: Cargo.toml
codex-rs/arg0/: Cargo.toml
codex-rs/cli/: Cargo.toml  aeye_scan.rs  artifacts.rs  plan.rs  scanner.rs
codex-rs/cli/src/: a_eye_main.rs  first_run_setup.rs  lib.rs  main.rs  model_setup.rs  multitool.rs
codex-rs/cli/src/aeye/: artifacts.rs  config.rs  explainer.rs  learner.rs  mod.rs  patcher.rs  planner.rs  policy.rs  scanner.rs  workflows.rs
codex-rs/cli/src/aeye/commands/: apply.rs  explain.rs  learn.rs  mod.rs  patch.rs  plan.rs  run.rs  scan.rs  status.rs  verify.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/common/: Cargo.toml
codex-rs/core/src/models_manager/: model_presets.rs
codex-rs/core/tests/suite/: aeye_apply.rs  aeye_explain.rs  aeye_learn.rs  aeye_patch.rs  aeye_plan.rs  aeye_policy.rs  aeye_run.rs  aeye_scan.rs  aeye_verify.rs  live_cli.rs  mod.rs  patcher.rs  planner.rs
codex-rs/login/src/: device_code_auth.rs
codex-rs/protocol/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  custom_terminal.rs  history_cell.rs  lib.rs  slash_command.rs  update_prompt.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  command_popup.rs  experimental_features_view.rs
codex-rs/tui/src/chatwidget/: home_panel.rs  status_rail.rs  system_stats.rs  tests.rs
codex-rs/tui/src/chatwidget/snapshots/: codex_tui__chatwidget__tests__experimental_features_popup.snap  codex_tui__chatwidget__tests__full_access_confirmation_popup.snap  codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap  codex_tui__chatwidget__tests__model_selection_popup.snap  codex_tui__chatwidget__tests__personality_selection_popup.snap  codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
codex-rs/tui/src/onboarding/: auth.rs  mod.rs  onboarding_screen.rs  safety_tier.rs  summary.rs  trust_directory.rs  welcome.rs
codex-rs/tui/src/onboarding/snapshots/: codex_tui__onboarding__trust_directory__tests__renders_snapshot_for_git_repo.snap
codex-rs/tui/src/shell/: mod.rs  panel_action_bar.rs  panel_chat_adapter.rs  panel_journey.rs  panel_overview.rs  panel_tabs.rs  panel_top_bar.rs  persistence.rs  policy_simulation.rs  shell_effects.rs  shell_layout.rs  shell_reducer.rs  shell_state.rs  tool_executor.rs  tool_registry.rs  ui_action.rs  workflow.rs
codex-rs/tui/src/shell/shell_reducer/tests/: approvals_policy.rs  invariants.rs  log_buffer.rs  mod.rs  persona_projection.rs
codex-rs/tui/src/shell/snapshots/: codex_tui__shell__shell_layout__tests__shell_layout_large.snap  codex_tui__shell__shell_layout__tests__shell_layout_medium.snap  codex_tui__shell__shell_layout__tests__shell_layout_small.snap
codex-rs/tui/src/status/: card.rs
codex-rs/tui/src/status/snapshots/: codex_tui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap  codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap  codex_tui__status__tests__status_snapshot_includes_forked_from.snap  codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap  codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap  codex_tui__status__tests__status_snapshot_shows_empty_limits_message.snap  codex_tui__status__tests__status_snapshot_shows_stale_limits_message.snap  codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
codex-rs/tui/tests/suite/: no_panic_on_startup.rs
codex-rs/utils/absolute-path/: Cargo.toml
codex-rs/utils/cache/: Cargo.toml
codex-rs/utils/cargo-bin/: Cargo.toml
codex-rs/utils/home-dir/: Cargo.toml
codex-rs/utils/image/: Cargo.toml
codex-rs/utils/string/: Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml
docs/: CLA.md  Cargo.toml  a-eye-architecture.md  a-eye-internal-rename-plan.md  a-eye-launch-plan.md  agents_md.md  apply.rs  authentication.md  config.md  contributing.md  exit-confirmation-prompt-design.md  explain.rs  explainer.rs  fix_from_logs.yaml  getting-started.md  i7-framework.md  i7-to-dao-mapping.md  install.md  learn.rs  learner.rs  llm_client.rs  mod.rs  open-source-fund.md  patch.rs  plan.rs  run.rs  safe_patch.yaml  sandbox.md  scan.rs  slash_commands.md  status.rs  tui-alternate-screen.md  verify.rs  workflows.rs
sdk/typescript/: package.json
shell-tool-mcp/: package.json
