[workspace]
members = [
    "core",
    "tui",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal - aeye-utils
aeye-ansi-escape = { path = "../aeye-utils/aeye-ansi-escape" }
aeye-apply-patch = { path = "../aeye-utils/aeye-apply-patch" }
aeye-async-utils = { path = "../aeye-utils/aeye-async-utils" }
aeye-execpolicy = { path = "../aeye-utils/aeye-execpolicy" }
aeye-file-search = { path = "../aeye-utils/aeye-file-search" }
aeye-git = { path = "../aeye-utils/aeye-git" }
aeye-keyring-store = { path = "../aeye-utils/aeye-keyring-store" }
aeye-mcp-types = { path = "../aeye-utils/aeye-mcp-types" }
aeye-protocol = { path = "../aeye-utils/aeye-protocol" }
aeye-utils-absolute-path = { path = "../aeye-utils/aeye-absolute-path" }
aeye-utils-cache = { path = "../aeye-utils/aeye-cache" }
aeye-utils-cargo-bin = { path = "../aeye-utils/aeye-cargo-bin" }
aeye-utils-home-dir = { path = "../aeye-utils/aeye-home-dir" }
aeye-utils-image = { path = "../aeye-utils/aeye-image" }
aeye-utils-json-to-toml = { path = "../aeye-utils/aeye-json-to-toml" }
aeye-utils-pty = { path = "../aeye-utils/aeye-pty" }
aeye-utils-readiness = { path = "../aeye-utils/aeye-readiness" }
aeye-utils-string = { path = "../aeye-utils/aeye-string" }

# External
allocative = "0.3.3"
ansi-to-tui = "7.0.0"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
assert_cmd = "2"
assert_matches = "1.5.0"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false }
base64 = "0.22.1"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = { version = "0.4.43", features = ["serde"] }
clap = "4"
clap_complete = "4"
color-eyre = "0.6.3"
crossterm = "0.28.1"
crossbeam-channel = "0.5.15"
ctor = "0.6.3"
derive_more = "2"
diffy = "0.4.2"
dirs = "6"
dotenvy = "0.15.7"
dunce = "1.0.4"
encoding_rs = "0.8.35"
env-flags = "0.1.1"
env_logger = "0.11.5"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
globset = "0.4"
http = "1.3.1"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
ignore = "0.4.23"
indoc = "2.0"
image = { version = "^0.25.9", default-features = false }
include_dir = "0.7.4"
indexmap = "2.12.0"
insta = "1.46.0"
itertools = "0.14.0"
keyring = { version = "3.6", default-features = false }
landlock = "0.4.4"
lazy_static = "1"
libc = "0.2.177"
log = "0.4"
lru = "0.16.3"
maplit = "1.0.2"
mime_guess = "2.0.5"
multimap = "0.10.0"
notify = "8.2.0"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
once_cell = "1.20.2"
openssl-sys = "*"
openthreads = "0.3"
os_info = "3.12.0"
owo-colors = "4.2.0"
path-absolutize = "3.1.1"
pathdiff = "0.2"
portable-pty = "0.9.0"
predicates = "3"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.10"
rand = "0.9"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
regex = "1.12.2"
regex-lite = "0.1.8"
reqwest = "0.12"
rmcp = { version = "0.12.0", default-features = false }
runfiles = { git = "https://github.com/dzbarsky/rules_rust", rev = "b56cbaa8465e74127f1ea216f813cd377295ad81" }
schemars = "0.8.22"
seccompiler = "0.5.0"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1.20"
serde_with = "3.16"
serde_yaml = "0.9"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10"
semver = "1.0"
shlex = "1.3.0"
similar = "2.7.0"
socket2 = "0.6.1"
strum = "0.27.2"
strum_macros = "0.27.2"
supports-color = "3.0.2"
sysinfo = "0.33.1"
sys-locale = "0.3.2"
tempfile = "3.23.0"
test-log = "0.2.19"
textwrap = "0.16.2"
thiserror = "2.0.17"
time = "0.3"
tiny_http = "0.12"
tokio = "1"
tokio-stream = "0.1.18"
tokio-test = "0.4"
tokio-tungstenite = { version = "0.28.0", features = ["proxy", "rustls-tls-native-roots"] }
tokio-util = "0.7.18"
toml = "0.9.5"
toml_edit = "0.24.0"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
tree-sitter-highlight = "0.25"
vt100 = "0.5"
unicode-segmentation = "1.12.0"
unicode-width = "0.1.14"
url = "2.5.2"
uuid = "1"
which = "8"
wildmatch = "2"
winsplit = "0.1"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"
