[package]
name = "a-eye"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
glob = "0.3.1"
owo-colors = "3.5"
rand = "0.8"
once_cell = "1.18"
regex-lite = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
uuid = { version = "1.4", features = ["v4"] }
walkdir = "2"

# Dependencies for the learner module
codex-core = { path = "../codex-rs/core" }
codex-otel = { path = "../codex-rs/otel" }
codex-protocol = { path = "../codex-rs/protocol" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
