[package]
name = "aeye-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "aeye_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aeye-protocol = { workspace = true }
aeye-execpolicy = { workspace = true }
aeye-git = { workspace = true }
aeye-file-search = { workspace = true }
aeye-utils-absolute-path = { workspace = true }
aeye-utils-home-dir = { workspace = true }
aeye-utils-pty = { workspace = true }
aeye-utils-readiness = { workspace = true }
aeye-utils-string = { workspace = true }
aeye-mcp-types = { workspace = true }
aeye-keyring-store = { workspace = true }
aeye-apply-patch = { workspace = true }

anyhow = { workspace = true }
arc-swap = "1.8.0"
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chardetng = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dunce = { workspace = true }
encoding_rs = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
include_dir = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
keyring = { workspace = true }
libc = { workspace = true }
multimap = { workspace = true }
once_cell = { workspace = true }
os_info = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "local-offset", "macros"] }
tokio = { workspace = true, features = ["io-std", "macros", "process", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = "0.24"
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
wildmatch = "2"

[features]
deterministic_process_ids = []
test-support = []

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
