load("//:defs.bzl", "aeye_rust_crate")

aeye_rust_crate(
    name = "cargo-bin",
    crate_name = "aeye_utils_cargo_bin",
    compile_data = ["repo_root.marker"],
    lib_data_extra = ["repo_root.marker"],
    test_data_extra = ["repo_root.marker"],
    rustc_env = {
        "CODEX_REPO_ROOT_MARKER": "$(rlocationpath :repo_root.marker)",
    },
)
